--- a/cart.html
+++ b/cart.html
@@ -98,7 +98,8 @@
 
       document.getElementById("clearBtn").onclick = () => { clearCart(); render(); };
       document.getElementById("checkoutBtn").onclick = () => {
-        alert("Next step (Part 3): Create an order in Supabase + redirect to Razorpay payment link.");
+        alert(location.href = "checkout.html";
+);
       };
     }
 
