--- a/success.html
+++ b/success.html
@@ -1,1 +1,17 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Payment Success — AhamStree</title>
+  <link rel="stylesheet" href="assets/styles.css" />
+</head>
+<body>
+  <div class="container" style="padding-top:30px;">
+    <h2>Thank you!</h2>
+    <p>Your payment is completed (or processing). We’ll confirm your order shortly.</p>
+    <a class="btn" href="index.html">Back to Home</a>
+  </div>
+</body>
+</html>
 
