--- a/login.html
+++ b/login.html
@@ -1,1 +1,33 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Account — AhamStree</title>
+  <link rel="stylesheet" href="assets/styles.css" />
+</head>
+<body>
+  <div id="header"></div>
+
+  <div class="container">
+    <h2 style="margin-top:0;">Account</h2>
+
+    <!-- This always shows, even if JS fails -->
+    <div id="debug" class="card" style="padding:12px;border-radius:14px;margin-bottom:12px;">
+      <div style="font-weight:900;">Account page loaded ✅</div>
+      <div class="small">If you only see this box and nothing else, JS imports are failing.</div>
+    </div>
+
+    <div id="app" class="card" style="padding:16px;border-radius:16px;max-width:680px;">
+      <div class="small">Loading account…</div>
+    </div>
+  </div>
+
+  <div id="footer"></div>
+
+  <script type="module">
+    import { renderHeader, renderFooter } from "./assets/ui.js";
+    import { supabase } from "./assets/supabase.js";
+
+    document
 
