--- a/login.html
+++ b/login.html
@@ -29,5 +29,75 @@
     import { renderHeader, renderFooter } from "./assets/ui.js";
     import { supabase } from "./assets/supabase.js";
 
-    document
+    document.getElementById("header").innerHTML = renderHeader("login");
+    document.getElementById("footer").innerHTML = renderFooter();
 
+    const app = document.getElementById("app");
+
+    function renderLoggedOut() {
+      app.innerHTML = `
+        <div style="font-weight:900;">Login / Sign up</div>
+        <div class="small" style="margin-top:6px;">
+          Enter your email and we’ll send you a login link (OTP/magic link).
+        </div>
+
+        <div style="margin-top:12px;">
+          <input id="email" class="input" type="email" placeholder="your@email.com" />
+        </div>
+
+        <button id="send" class="btn" style="margin-top:12px;">Send login link</button>
+        <div id="status" class="small" style="margin-top:10px;"></div>
+      `;
+
+      const sendBtn = document.getElementById("send");
+      const status = document.getElementById("status");
+
+      sendBtn.onclick = async () => {
+        const email = document.getElementById("email").value.trim();
+        if (!email) {
+          status.textContent = "Please enter an email.";
+          return;
+        }
+
+        status.textContent = "Sending…";
+
+        const { error } = await supabase.auth.signInWithOtp({
+          email,
+          options: {
+            // We'll set this properly after your custom domain is finalized.
+            // emailRedirectTo: window.location.origin + "/login.html",
+          },
+        });
+
+        status.textContent = error ? ("Error: " + error.message) : "Check your email for the login link.";
+      };
+    }
+
+    function renderLoggedIn(email) {
+      app.innerHTML = `
+        <div style="font-weight:900;">Logged in ✅</div>
+        <div class="small" style="margin-top:6px;">${email}</div>
+        <button id="logout" class="btn secondary" style="margin-top:12px;">Log out</button>
+      `;
+
+      document.getElementById("logout").onclick = async () => {
+        await supabase.auth.signOut();
+        renderLoggedOut();
+      };
+    }
+
+    // Initial render
+    const { data: sessionData } = await supabase.auth.getSession();
+    const userEmail = sessionData?.session?.user?.email;
+    if (userEmail) renderLoggedIn(userEmail);
+    else renderLoggedOut();
+
+    // Keep in sync if auth changes
+    supabase.auth.onAuthStateChange((_event, session) => {
+      const e = session?.user?.email;
+      if (e) renderLoggedIn(e);
+      else renderLoggedOut();
+    });
+  </script>
+</body>
+</html>
