--- a/index.html
+++ b/index.html
@@ -10,32 +10,23 @@
   <div id="header"></div>
 
   <div class="container">
-    <div class="card" style="padding:18px;border-radius:16px;">
-      <div style="font-size:30px;font-weight:900;line-height:1.1;">
-        Elegant Sarees.<br/>Delivered to your door.
-      </div>
-      <p style="opacity:.8;margin-top:10px;">
-        New launches, festive picks, and timeless classics.
-      </p>
-      <div class="row">
-        <a class="btn" href="products.html">Shop Sarees</a>
-        <a class="btn secondary" href="#offer">First-time offer</a>
-      </div>
+    <div class="card" style="padding:26px;border-radius:18px;">
+  <div style="display:flex; flex-direction:column; align-items:center; text-align:center; gap:10px;">
+    <img src="assets/logo.svg" alt="Ahamstree" style="max-width:520px; width:80%; height:auto;"
+      onerror="this.style.display='none'; document.getElementById('fallbackBrand').style.display='block';" />
+    <div id="fallbackBrand" style="display:none; font-size:42px; font-weight:900; letter-spacing:1px;">ahamstree</div>
+
+    <div style="max-width:720px; opacity:0.85; font-size:16px; line-height:1.5;">
+      Thoughtfully curated sarees for every occasion — festive, wedding, and everyday elegance.
     </div>
 
-    <div id="offer" class="card" style="margin-top:14px;padding:16px;border-radius:16px;">
-      <div style="font-weight:900;">First-time buyer discount</div>
-      <div class="small" style="margin-top:6px;">
-        (Placeholder) We’ll add coupon logic later.
-      </div>
+    <div class="row" style="justify-content:center; margin-top:8px;">
+      <a class="btn" href="products.html">Shop Sarees</a>
+      <a class="btn secondary" href="about.html">Our Story</a>
     </div>
+  </div>
+</div>
 
-    <div class="card" style="margin-top:14px;padding:16px;border-radius:16px;">
-      <div style="font-weight:900;">About AhamStree</div>
-      <div class="small" style="margin-top:6px;">
-        Add your story, fabric quality, sourcing, and trust markers.
-      </div>
-    </div>
   </div>
 
   <div id="footer"></div>
