--- a/product.html
+++ b/product.html
@@ -108,6 +108,10 @@
     }
 
     loadProduct();
+
+  import { renderHeader, renderFooter } from "./assets/ui.js";
+  document.getElementById("header").innerHTML = renderHeader("home");
+  document.getElementById("footer").innerHTML = renderFooter();
   </script>
 </body>
 </html>
