--- a/checkout.html
+++ b/checkout.html
@@ -1,54 +1,27 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Checkout — AhamStree</title>
+  <meta name="description" content="Checkout and pay for your order.">
+  <link rel="manifest" href="/manifest.webmanifest">
+  <meta name="theme-color" content="#b3302a">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <div id="header"></div>
 
-  <div class="container">
+  <main id="content" class="container">
     <h2 style="margin-top:0;">Checkout</h2>
-    <div class="small">Enter shipping details. You’ll be redirected to Razorpay to pay.</div>
-    <hr />
 
-    <div id="warn" class="small" style="color:crimson; display:none;"></div>
+    <form id="checkoutForm" class="card" style="padding:16px;border-radius:16px;max-width:680px;">
+      <div id="warn" class="small" style="display:none;color:#a00;margin-bottom:8px;">Your cart is empty.</div>
 
-    <form id="form" class="card" style="padding:16px;border-radius:16px;max-width:680px;">
-      <label class="small">Full name</label>
-      <input class="input" name="full_name" required placeholder="e.g., Monil Gupta" />
+      <label class="small">Email</label>
+      <input class="input" name="email" required placeholder="you@email.com" />
 
-      <div style="height:10px;"></div>
-
-      <label class="small">Phone</label>
-      <input class="input" name="phone" required placeholder="10-digit mobile" />
-
-      <div style="height:10px;"></div>
-
-      <label class="small">Address line 1</label>
-      <input class="input" name="address_line1" required placeholder="House / street" />
-
-      <div style="height:10px;"></div>
-
-      <label class="small">Address line 2 (optional)</label>
-      <input class="input" name="address_line2" placeholder="Landmark" />
-
-      <div style="height:10px;"></div>
-
-      <div class="row">
-        <div style="flex:1;">
-          <label class="small">City</label>
-          <input class="input" name="city" required />
-        </div>
-        <div style="flex:1;">
-          <label class="small">State</label>
-          <input class="input" name="state" required />
-        </div>
-      </div>
-
-      <div style="height:10px;"></div>
+      <div style="height:8px;"></div>
 
       <label class="small">Pincode</label>
       <input class="input" name="pincode" required placeholder="e.g., 560001" />
@@ -62,62 +35,68 @@
         Tip: For best experience, ask users to login (optional). For launch, guest checkout is okay.
       </div>
     </form>
-  </div>
+  </main>
 
   <div id="footer"></div>
 
   <script type="module">
     import { renderHeader, renderFooter } from "./assets/ui.js";
+    import { showCookieConsent } from "./assets/cookie-consent.js";
+    import { loadAnalytics } from "./assets/analytics.js";
     import { getCart } from "./assets/cart.js";
     import { supabase } from "./assets/supabase.js";
 
     document.getElementById("header").innerHTML = renderHeader("cart");
     document.getElementById("footer").innerHTML = renderFooter();
+    showCookieConsent(loadAnalytics);
 
     const cart = getCart();
     const warn = document.getElementById("warn");
-    if (!cart.length) {
+    const form = document.getElementById("checkoutForm");
+    const status = document.getElementById("status");
+    if (!cart || !cart.length) {
       warn.style.display = "block";
-      warn.textContent = "Your cart is empty. Go back and add products first.";
     }
 
-    document.getElementById("form").addEventListener("submit", async (e) => {
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      if (!cart.length) return;
-
-      const status = document.getElementById("status");
-      const payBtn = document.getElementById("payBtn");
+      if (!cart || !cart.length) {
+        status.textContent = "Your cart is empty.";
+        return;
+      }
       status.textContent = "Creating order…";
-      payBtn.disabled = true;
-
-      const fd = new FormData(e.target);
-      const shipping = Object.fromEntries(fd.entries());
-
-      // Call Supabase Edge Function (server-side) to:
-      // 1) validate inventory & prices
-      // 2) create order + order_items
-      // 3) create Razorpay payment link
-      // 4) return payment_link_url
-      const { data, error } = await supabase.functions.invoke("create-payment-link", {
-        body: { cart, shipping }
-      });
-
-      if (error) {
-        status.textContent = "Error: " + error.message;
-        payBtn.disabled = false;
-        return;
+      // NOTE: For security, order creation should be done on server-side using Razorpay secret.
+      // Here we show a placeholder client flow that expects a server endpoint to create a Razorpay order.
+      // Replace /api/create-order with your serverless endpoint.
+      try {
+        const resp = await fetch("/api/create-order", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ cart, form: Object.fromEntries(new FormData(form)) })
+        });
+        const data = await resp.json();
+        if (!resp.ok) throw new Error(data?.message || "Order creation failed");
+        // data should contain { orderId, amount, razorpayKeyId }
+        const options = {
+          key: data.razorpayKeyId,
+          amount: data.amount,
+          currency: "INR",
+          name: "AhamStree",
+          order_id: data.orderId,
+          handler: function (response) {
+            // After payment complete, redirect to success (server/webhook will verify)
+            location.href = "success.html";
+          }
+        };
+        const rzp = new Razorpay(options);
+        rzp.open();
+      } catch (err) {
+        status.textContent = "Error: " + err.message;
       }
-
-      if (!data?.payment_link_url) {
-        status.textContent = "Error: Payment link not created.";
-        payBtn.disabled = false;
-        return;
-      }
-
-      status.textContent = "Redirecting to Razorpay…";
-      window.location.href = data.payment_link_url;
     });
   </script>
+
+  <!-- Razorpay script (client-side public key only) -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js" defer></script>
 </body>
 </html>
-
