--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AhamStree — Sarees</title>
-  <meta name="description" content="Thoughtfully curated sarees for festive, wedding and everyday elegance.">
-  <meta property="og:title" content="AhamStree — Sarees">
-  <meta property="og:description" content="Thoughtfully curated sarees for festive, wedding and everyday elegance.">
-  <meta property="og:image" content="/assets/og-image.png">
+  <title>Account — AhamStree</title>
+  <meta name="description" content="Login or sign up to manage your account and orders.">
   <link rel="manifest" href="/manifest.webmanifest">
   <meta name="theme-color" content="#b3302a">
   <link rel="stylesheet" href="assets/styles.css" />
@@ -16,21 +13,16 @@
   <div id="header"></div>
 
   <main id="content" class="container">
-    <div class="card" style="padding:26px;border-radius:18px;">
-      <div style="display:flex; flex-direction:column; align-items:center; text-align:center; gap:10px;">
-        <img src="assets/logo.svg" alt="Ahamstree" style="max-width:520px; width:80%; height:auto;"
-          onerror="this.style.display='none'; document.getElementById('fallbackBrand').style.display='block';" />
-        <div id="fallbackBrand" style="display:none; font-size:42px; font-weight:900; letter-spacing:1px;">ahamstree</div>
+    <h2 style="margin-top:0;">Account</h2>
 
-        <div style="max-width:720px; opacity:0.85; font-size:16px; line-height:1.5;">
-          Thoughtfully curated sarees for every occasion — festive, wedding, and everyday elegance.
-        </div>
+    <!-- This always shows, even if JS fails -->
+    <div id="debug" class="card" style="padding:12px;border-radius:14px;margin-bottom:12px;">
+      <div style="font-weight:900;">Account page loaded ✅</div>
+      <div class="small">If you only see this box and nothing else, JS imports are failing.</div>
+    </div>
 
-        <div class="row" style="justify-content:center; margin-top:8px;">
-          <a class="btn" href="products.html">Shop Sarees</a>
-          <a class="btn secondary" href="about.html">Our Story</a>
-        </div>
-      </div>
+    <div id="app" class="card" style="padding:16px;border-radius:16px;max-width:680px;">
+      <div class="small">Loading account…</div>
     </div>
   </main>
 
@@ -40,12 +32,65 @@
     import { renderHeader, renderFooter } from "./assets/ui.js";
     import { showCookieConsent } from "./assets/cookie-consent.js";
     import { loadAnalytics } from "./assets/analytics.js";
+    import { supabase } from "./assets/supabase.js";
 
-    document.getElementById("header").innerHTML = renderHeader("home");
+    document.getElementById("header").innerHTML = renderHeader("login");
     document.getElementById("footer").innerHTML = renderFooter();
-
-    // Cookie consent and analytics loader (runs after header/footer are injected)
     showCookieConsent(loadAnalytics);
+
+    const app = document.getElementById("app");
+
+    function renderLoggedOut() {
+      app.innerHTML = `
+        <div style="font-weight:900;">Login / Sign up</div>
+        <div class="small" style="margin-top:6px;">
+          Enter your email and we’ll send you a login link (OTP/magic link).
+        </div>
+
+        <div style="margin-top:12px;">
+          <input id="email" class="input" type="email" placeholder="your@email.com" />
+        </div>
+
+        <button id="send" class="btn" style="margin-top:12px;">Send login link</button>
+        <div id="status" class="small" style="margin-top:10px;"></div>
+      `;
+
+      const sendBtn = document.getElementById("send");
+      const status = document.getElementById("status");
+
+      sendBtn.onclick = async () => {
+        const email = document.getElementById("email").value.trim();
+        if (!email) return status.textContent = "Enter an email.";
+        status.textContent = "Sending link…";
+        const { error } = await supabase.auth.signInWithOtp({ email });
+        if (error) status.textContent = "Error: " + error.message;
+        else status.textContent = "Check your email for the magic link.";
+      };
+    }
+
+    function renderLoggedIn(user) {
+      app.innerHTML = `
+        <div style="font-weight:900;">Hello, ${user.email}</div>
+        <div class="small" style="margin-top:6px;">Manage orders and profile (future).</div>
+        <div style="height:8px;"></div>
+        <button id="signout" class="btn secondary">Sign out</button>
+      `;
+      document.getElementById("signout").onclick = async () => {
+        await supabase.auth.signOut();
+        renderLoggedOut();
+      };
+    }
+
+    (async function init() {
+      const { data } = await supabase.auth.getSession();
+      const session = data?.session;
+      if (session) renderLoggedIn(session.user);
+      else renderLoggedOut();
+
+      supabase.auth.onAuthStateChange((event, sessionData) => {
+        if (sessionData?.session) renderLoggedIn(sessionData.session.user);
+      });
+    })();
   </script>
 </body>
 </html>
