--- a/products.html
+++ b/products.html
@@ -1,71 +1,82 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Products — AhamStree</title>
+  <meta name="description" content="Browse our saree collections — silk, banarasi, kanjivaram and more.">
+  <link rel="manifest" href="/manifest.webmanifest">
+  <meta name="theme-color" content="#b3302a">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <div id="header"></div>
 
-  <div class="container">
+  <main id="content" class="container">
     <h2 style="margin-top:0;">Sarees</h2>
     <div class="small">Click a product to view details</div>
     <hr />
     <div id="status" class="small">Loading…</div>
     <div id="grid" class="grid" style="margin-top:12px;"></div>
-  </div>
+  </main>
 
   <div id="footer"></div>
 
   <script type="module">
     import { renderHeader, renderFooter } from "./assets/ui.js";
-    import { supabase } from "./assets/supabase.js";
+    import { showCookieConsent } from "./assets/cookie-consent.js";
+    import { loadAnalytics } from "./assets/analytics.js";
+    import { supabase } from "./assets/supabase.js"; // existing supabase client in repo
+    import { cartCount } from "./assets/cart.js";
 
     document.getElementById("header").innerHTML = renderHeader("products");
     document.getElementById("footer").innerHTML = renderFooter();
+    showCookieConsent(loadAnalytics);
+
+    const status = document.getElementById("status");
+    const grid = document.getElementById("grid");
 
     async function loadProducts() {
-      const status = document.getElementById("status");
-      const grid = document.getElementById("grid");
+      status.textContent = "Loading…";
+      try {
+        const { data, error } = await supabase
+          .from("products")
+          .select("*")
+          .order("id", { ascending: false })
+          .limit(200);
 
-      const { data, error } = await supabase
-        .from("products")
-        .select("id,title,price_inr,inventory_qty,is_active, product_images(image_url, sort_order)")
-        .eq("is_active", true)
-        .order("created_at", { ascending: false });
+        if (error) throw error;
+        if (!data || !data.length) {
+          status.textContent = "";
+          grid.innerHTML = `<div class="card empty">No products found.</div>`;
+          return;
+        }
 
-      if (error) {
-        status.textContent = "Error: " + error.message;
-        return;
-      }
-
-      status.textContent = "";
-
-      const normalized = (data ?? []).map(p => {
-        const imgs = (p.product_images ?? []).slice().sort((a,b)=> (a.sort_order??0)-(b.sort_order??0));
-        return { ...p, image_url: imgs[0]?.image_url ?? "" };
-      });
-
-      grid.innerHTML = normalized.map(p => `
-        <div class="card">
-          <a href="product.html?id=${encodeURIComponent(p.id)}" style="text-decoration:none;color:inherit;">
-            ${p.image_url ? `<img src="${p.image_url}" alt="${p.title}" loading="lazy">` : `<div style="height:280px;background:#fafafa;"></div>`}
-            <div class="p">
-              <div style="font-weight:900;">${p.title}</div>
-              <div style="margin-top:6px;opacity:.85;">₹${p.price_inr}</div>
-              <div class="small" style="margin-top:6px;">
-                ${p.inventory_qty > 0 ? `${p.inventory_qty} in stock` : "Sold out"}
+        status.textContent = "";
+        grid.innerHTML = data.map(p => `
+          <div class="card">
+            <a href="product.html?id=${p.id}" style="text-decoration:none;color:inherit;display:block;">
+              <img src="${p.image_url || 'assets/icon-192.png'}" alt="${(p.alt_text || p.title || 'Product image')}" />
+              <div class="p">
+                <div style="font-weight:900;">${escapeHtml(p.title)}</div>
+                <div style="margin-top:6px;opacity:.85;">₹${p.price_inr}</div>
+                <div class="small" style="margin-top:6px;">
+                  ${p.inventory_qty > 0 ? `${p.inventory_qty} in stock` : "Sold out"}
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-      `).join("");
+            </a>
+          </div>
+        `).join("");
+      } catch (err) {
+        status.textContent = "Error loading products: " + err.message;
+      }
+    }
+
+    function escapeHtml(s = "") {
+      return String(s).replaceAll("&", "&amp;").replaceAll("<", "&lt;").replaceAll(">", "&gt;");
     }
 
     loadProducts();
   </script>
 </body>
 </html>
-
