--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,12 @@
 
   <div class="container">
     <div class="card" style="padding:22px;border-radius:18px;">
-      <h2 style="margin-top:0;">Contact</h2>
-      <p class="small" style="max-width:72ch;">Contact page placeholder. Add your email/phone/WhatsApp, business address, and a simple contact form.</p>
+     <h1>Contact Us</h1>
+<p>We’d love to hear from you.</p>
+
+<p><strong>Phone:</strong> <a href="tel:9582297550">+91 95822 97550</a></p>
+
+<p>Our team is available Monday to Saturday, 10 AM – 7 PM.</p>
       
       <div style="margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;">
         <a class="btn" href="products.html">Browse Sarees</a>
