--- a/about.html
+++ b/about.html
@@ -11,8 +11,37 @@
 
   <div class="container">
     <div class="card" style="padding:22px;border-radius:18px;">
-      <h2 style="margin-top:0;">Our Story</h2>
-      <p class="small" style="max-width:72ch;">AhamStree is a demo storefront. Replace this text with your brand story, mission, craft details, and artisan features.</p>
+<h1>Our Story</h1>
+
+<p>
+Ahamstree was born out of a deep love for India’s timeless handloom traditions
+and the skilled artisans who keep them alive.
+</p>
+
+<p>
+At the heart of our journey lies the elegance of <strong>Chanderi sarees</strong> —
+known for their lightweight texture, subtle sheen, and graceful motifs.
+Woven in the historic town of Chanderi, these sarees reflect centuries of
+craftsmanship passed down through generations.
+</p>
+
+<p>
+Every saree at Ahamstree is a celebration of handloom weaving — slow, mindful,
+and rooted in authenticity. We work closely with artisans to preserve traditional
+techniques while presenting designs that resonate with the modern woman.
+</p>
+
+<p>
+From delicate silk blends to breathable cotton handlooms, our collection is
+crafted to tell stories — of culture, patience, and pride. Each weave carries
+the soul of the loom and the hands that created it.
+</p>
+
+<p>
+At Ahamstree, we believe true luxury lies in authenticity, sustainability, and
+the quiet beauty of handmade fabrics.
+</p>
+
       
       <div style="margin-top:14px;display:flex;gap:10px;flex-wrap:wrap;">
         <a class="btn" href="products.html">Browse Sarees</a>
